--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,8 @@
   padding: 32px 40px 24px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24;
+  text-align: left;
 }
-
