--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,30 +1,39 @@
-
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 40px;
-    padding-bottom: 28px;
-  }
-  .header__logo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding-bottom: 28px; */
+  margin-bottom: 28px;
+  max-height: 40px;
+  box-sizing: border-box;
+}
+
+.header__logo {
   display: flex;
   gap: 20px;
   align-items: center;
-  }
-  .header__avatar-logo{
+  max-height: 40px;
+  box-sizing: border-box;
+}
+.header__avatar-logo {
   display: flex;
   align-items: center;
-  }
-  .header__button {
-    border-style: none;
-    padding: 0;
-  }
-  .header__avatar-info{
-    padding-left: 12px;
-  }
-  .header__avatar-img{
-    padding-left: 12px;
-  }
-  .header__avatar-name{
-    margin-left: 20px;
-  }
+  max-height: 40px;
+}
+.header__button {
+  border-style: none;
+  padding: 0 0 0 5px;
+  font-family: "Cabinet Grotesk";
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+}
+.header__avatar-info {
+  padding-left: 12px;
+}
+.header__avatar-img {
+  padding-left: 12px;
+}
+.header__avatar-name {
+  margin-left: 20px;
+}
