--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,6 +11,6 @@
   flex-direction: column;
   font-size: 20px;
   font-weight: 700;
-  line-height: 24;
+  line-height: 24px;
   text-align: left;
 }
