--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,16 +1,20 @@
 .weather {
-  position: relative;
   max-height: 80px;
 }
 .weather_info {
-  position: absolute;
-  top: 20px;
-  left: 16px;
   color: white;
   font-size: 36px;
+  position: absolute;
+  top: 130px;
+  left: 58px;
+  z-index: 1;
+  margin: 0;
 }
 .weather_image {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
 }
 .weather_title {
   margin: 40px 0 34px;
