--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,44 +1,55 @@
 .modal_preview {
-    max-width: 670px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    border-radius: 20px;
-    padding: 20px;
-    justify-content: space-between;
+  max-width: 670px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+  justify-content: space-between;
 }
 .modal_preview-image {
-    border-radius: 20px;
-    width: 100%;
-    height: 100%;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
 }
 .modal_preview-close {
-    height: 20px;
-    width: 20px;
-    border-style: none;
-    background-color: white;
-    padding: 0;
-    background-image: url(../../images/close.svg);
+  height: 20px;
+  width: 20px;
+  border-style: none;
+  background-color: white;
+  padding: 0;
+  background-image: url(../../images/close.svg);
 }
 .modal_preview-name {
-    font-size: 16px;
-    line-height: 20px;
-    position: relative;
-    top: 37px;
-    left: 137px;
-    width: 54px;
-    height: 24px;
-    background-color: white;
-    text-align: center;
-    border-radius: 2px;
+  font-size: 16px;
+  line-height: 20px;
+  position: relative;
+  top: 37px;
+  left: 137px;
+  width: 54px;
+  height: 24px;
+  background-color: white;
+  text-align: center;
+  border-radius: 2px;
 }
 .modal_preview-weather {
-    padding: 13px 142px 0 0;
+  padding: 13px 142px 0 0;
+  display: grid;
 }
 .modal_preview-content {
-    max-width: 325px;
-    max-height: 328px;
-    display: flex;
-    flex-direction: column-reverse;
+  max-width: 325px;
+  max-height: 328px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.modal_item-delete {
+  border-style: none;
+  color: rgba(255, 77, 0, 1);
+  line-height: 24px;
+  font-size: 20px;
+  background-color: white;
+  border-width: 0;
+  padding-inline: 0;
+  padding-top: 256px;
 }
