--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,7 @@
+.main {
+  display: flex;
+  flex-direction: column;
+}
 .weather {
   max-height: 80px;
 }
@@ -30,7 +34,6 @@
   max-width: 325px;
   max-height: 328px;
   display: flex;
-  gap: 20px;
 }
 .card {
   display: flex;
@@ -38,7 +41,7 @@
   flex-direction: column-reverse;
   align-items: center;
   margin: 0;
-  padding: 0;
+  padding: 0 20px 0 0;
   min-width: 325px;
   max-height: 328px;
 }
