--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -21,14 +21,12 @@
   padding-right: 16px;
 }
 .profile_title {
-  margin: 0;
+  margin: 16px 0 16px;
 }
 .profile__card_section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin: 0;
-  padding: 0 0 0 116px;
+  padding: 0 0 0 115px;
+  width: 100%;
 }
 .profile__card_items {
   display: grid;
