--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -55,8 +55,8 @@
   border-radius: 2px;
 }
 .card_image {
-  width: 100%;
-  height: 100%;
+  width: 325px;
+  height: 328px;
   border-radius: 10px;
   border: 1px;
   border-style: solid;
