Delete Card + Post Card Api fix
delete card function removes card immediately  and was able to find Id from post card Api response object

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,3 +37,7 @@
 .header__avatar-name {
   margin-left: 20px;
 }
+.header__avatar-name:-webkit-any-link {
+  text-decoration: none;
+  color: black;
+}
