--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -24,16 +24,14 @@
   margin: 40px 0 34px;
 }
 .card_section {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0;
 }
 .card_items {
-  max-width: 325px;
-  max-height: 328px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 325px);
+  gap: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 .card {
   display: flex;
