--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -71,3 +71,17 @@
 .modal_radio-input {
   padding-bottom: 8px;
 }
+.modal_buttons {
+  display: flex;
+  width: 100%;
+}
+.modal_register-button {
+  width: 73px;
+  height: 36px;
+  background-color: transparent;
+  border-radius: 2px;
+  color: rgba(0, 0, 0, 0.5);
+  border-style: none;
+  margin-left: 12px;
+  font-family: inherit;
+}
