--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -62,6 +62,10 @@
   color: white;
   border-style: none;
 }
+.modal_submit:hover {
+  cursor: pointer;
+  background-color: grey;
+}
 .modal_radio {
   padding-bottom: 32px;
 }
@@ -84,4 +88,8 @@
   border-style: none;
   margin-left: 12px;
   font-family: inherit;
+}
+.modal_register-button:hover {
+  cursor: pointer;
+  background-color: lightgrey;
 }
