--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,14 +31,17 @@
 .header__avatar-info {
   padding-left: 12px;
 }
+.header__avatar-info:hover {
+  cursor: pointer;
+}
 .header__avatar-img {
-  padding-left: 12px;
   height: 40px;
   width: 40px;
   border-radius: 50%;
 }
 .header__avatar-name {
   margin-left: 20px;
+  margin-right: 12px;
 }
 .header__avatar-name:-webkit-any-link {
   text-decoration: none;
